--- a/Vaultex.Web/Views/Organisation/Index.cshtml
+++ b/Vaultex.Web/Views/Organisation/Index.cshtml
@@ -9,6 +9,7 @@
 <div class="text-center">
     <h1 class="display-4">Organisation Section</h1>
 
+    <p style="color:red;">@TempData["responseMsg"]</p>
     <br />
     <form asp-action="Index" asp-controller="Organisation" enctype="multipart/form-data">
 
